Fix mobile alignment of interstitial modal

--- a/polaris.shopify.com/src/components/InterstitialModal/InterstitialModal.module.scss
+++ b/polaris.shopify.com/src/components/InterstitialModal/InterstitialModal.module.scss
@@ -19,8 +19,6 @@
 
   @media (max-width: 480px) {
     padding: 0.75rem;
-    align-items: flex-start;
-    padding-top: 2rem;
   }
 
   @media (prefers-reduced-motion: reduce) {
